folders have their own landing page that shows children

--- a/vaultREAL/📁developer/N10-008 CompTIA Network+/2.3.1 Network Switching.md
+++ b/vaultREAL/📁developer/N10-008 CompTIA Network+/2.3.1 Network Switching.md
@@ -58,7 +58,7 @@ Interface: 172.20.160.1 --- 0x19
 - **NS** - Neighbor solicitation 
 	- sent as multicast
 - **NA** - Neighbor Advertisement
-![](_attachments/Pasted%20image%2020221003162310.png)
+![Pasted image 20221003162310](%F0%9F%93%81developer/N10-008%20CompTIA%20Network+/_attachments/Pasted%20image%2020221003162310.png)
 **PoE - Power over Ethernet**
 - single connection for network & power
 - power provided by switch
