--- a/vaultREAL/📁developer/N10-008 CompTIA Network+/2.3.2 VLANs and Trunking.md
+++ b/vaultREAL/📁developer/N10-008 CompTIA Network+/2.3.2 VLANs and Trunking.md
@@ -9,15 +9,15 @@
 
 ### Configuring VLANs
 - 1 physical switch separated into 3 VLANs
-![](📁developer/N10-008%20CompTIA%20Network+/_attachments/Pasted%20image%2020221010122820.png)
+![Pasted image 20221010122820](%F0%9F%93%81developer/N10-008%20CompTIA%20Network+/_attachments/Pasted%20image%2020221010122820.png)
 #### multiple switches
 - lots of overhead and uses up many ports.
 - possible but not practical
-![](📁developer/N10-008%20CompTIA%20Network+/_attachments/Pasted%20image%2020221010123016.png)
+![Pasted image 20221010123016](%F0%9F%93%81developer/N10-008%20CompTIA%20Network+/_attachments/Pasted%20image%2020221010123016.png)
 ### VLAN Trunking
 - send multiple VLANs across one trunk
 - much less cabling
-![](📁developer/N10-008%20CompTIA%20Network+/_attachments/Pasted%20image%2020221010123149.png)
+![Pasted image 20221010123149](%F0%9F%93%81developer/N10-008%20CompTIA%20Network+/_attachments/Pasted%20image%2020221010123149.png)
 - Normal Ethernet frame
 | preamble | SFD | Destination MAC | Source MAC | Type | PAYLOAD | FCS |
 | -------- | --- | --------------- | ---------- | ---- | ------- | --- |
