--- a/vaultREAL/📁developer/N10-008 CompTIA Network+/2.3.4 Interface Configurations.md
+++ b/vaultREAL/📁developer/N10-008 CompTIA Network+/2.3.4 Interface Configurations.md
@@ -15,7 +15,7 @@
 	- multi interface acts like one big interface
 	- **LACP** ( Link Aggregation Control Protocol)
 - link switches with multiple ethernet lines, acts as one large line
-![](📁developer/N10-008%20CompTIA%20Network+/_attachments/Pasted%20image%2020221010130502.png)
+![Pasted image 20221010130502](%F0%9F%93%81developer/N10-008%20CompTIA%20Network+/_attachments/Pasted%20image%2020221010130502.png)
 
 ### port mirroring
 - copy traffic from interfaces
