--- a/vaultREAL/📁developer/N10-008 CompTIA Network+/2.3.5 Straight-Through and Crossover Cable.md
+++ b/vaultREAL/📁developer/N10-008 CompTIA Network+/2.3.5 Straight-Through and Crossover Cable.md
@@ -2,10 +2,10 @@
 - patch cables
 - most common ethernet cable
 - connect workstations to network
-![](📁developer/N10-008%20CompTIA%20Network+/_attachments/Pasted%20image%2020221010141050.png)
+![Pasted image 20221010141050](%F0%9F%93%81developer/N10-008%20CompTIA%20Network+/_attachments/Pasted%20image%2020221010141050.png)
 
 ### Cross-Over cable
-![](📁developer/N10-008%20CompTIA%20Network+/_attachments/Pasted%20image%2020221010141358.png)
+![Pasted image 20221010141358](%F0%9F%93%81developer/N10-008%20CompTIA%20Network+/_attachments/Pasted%20image%2020221010141358.png)
 
 ### straight-through or crossover
 | problem                    | cable type         |
